--- a/test_pluma/pluma/templates/pluma/nube.html
+++ b/test_pluma/pluma/templates/pluma/nube.html
@@ -8,23 +8,97 @@
     <meta charset="utf-8">
     <title> Prueba frontend</title>
     <style type="text/text/css">
-        #gis{width: 80%;height; 700px;}
+        #gis{width: 80%;height; 800px}
+        #mapid { height: 180px; }
     </style>
     <script type="text/javascript" src="{% static 'pluma/js/leaflet.ajax.js' %}">
-
     </script>
+    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}"/>
+    <link href="{% static 'pluma/css/styles.css' %}" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <script src="{% static 'pluma/js/scripts.js' %}"></script>
   </head>
   <body>
-    <h1>Prueba Pluma</h1>
-    <br>
-    <br>
+    <div class="container-fluid text-center menu-section" id="menu">
+    <div class="container d-flex h-100 align-items-center">
+        <div class="mx-auto text-center text-white">
+            <h1>Corrida 1</h1>
+        </div>
+    </div>
+      </div>
     <script type="text/javascript">
       function our_layers1(map, options){
         var pluma = new L.GeoJSON.AJAX("{% url 'cargar_pluma' %}",{
-        });
+          style: function (feature) {
+          return {color: feature.properties.color};
+        }
+      });
         pluma.addTo(map);
+      var ruta = new L.GeoJSON.AJAX("{% url 'cargar_rutas' %}",{
+      });
+        ruta.addTo(map);
+      L.layerGroup([ruta])
+      .addLayer(pluma)
+      .addTo(map);
       }
     </script>
+    <div id="gis">
     {% leaflet_map "nube" callback="window.our_layers1" %}
+  </div>
+
+  <section class="contact-section bg-black">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4 mb-3 mb-md-0">
+                  <div class="card py-4 h-100">
+                      <div class="card-body text-center">
+                          <h4 class="text-uppercase m-0">Autores</h4>
+                          <hr class="my-4" />
+                          <div class="small text-black-50">Ivan Uribe Méndez</div>
+                          <div class="small text-black-50">Bryan Oswaldo Torres Barajas</div>
+                          <div class="small text-black-50">Brandon Islas Diez de Sollano</div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-4 mb-3 mb-md-0">
+                  <div class="card py-4 h-100">
+                      <div class="card-body text-center">
+
+                          <h4 class="text-uppercase m-0">Directores</h4>
+                          <hr class="my-4" />
+                          <div class="small text-black-50">Jaime Hugo Puebla Lomas</div>
+                          <div class="small text-black-50">Jose Carlos Escalona Jimenez</div>
+                          <div class="small text-black-50"></div>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-4 mb-3 mb-md-0">
+                  <div class="card py-4 h-100">
+                      <div class="card-body text-center">
+
+                          <h4 class="text-uppercase m-0">Contacto</h4>
+                          <hr class="my-4" />
+                          <div class="small text-black-50">+1 (555) 902-8832</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="social d-flex justify-content-center">
+              <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+              <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+              <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+          </div>
+      </div>
+  </section>
+  <!-- Footer-->
+
+  <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Third party plugin JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+
+
   </body>
 </html>
