--- a/test_pluma/pluma/templates/pluma/nube.html
+++ b/test_pluma/pluma/templates/pluma/nube.html
@@ -2,103 +2,148 @@
 {% load leaflet_tags %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    {% leaflet_js %}
-    {% leaflet_css %}
-    <meta charset="utf-8">
-    <title> Prueba frontend</title>
-    <style type="text/text/css">
-        #gis{width: 80%;height; 800px}
-        #mapid { height: 180px; }
-    </style>
-    <script type="text/javascript" src="{% static 'pluma/js/leaflet.ajax.js' %}">
-    </script>
-    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}"/>
-    <link href="{% static 'pluma/css/styles.css' %}" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <script src="{% static 'pluma/js/scripts.js' %}"></script>
-  </head>
-  <body>
-    <div class="container-fluid text-center menu-section" id="menu">
-    <div class="container d-flex h-100 align-items-center">
-        <div class="mx-auto text-center text-white">
-            <h1>Corrida 1</h1>
-        </div>
-    </div>
-      </div>
-    <script type="text/javascript">
-      function our_layers1(map, options){
-        var pluma = new L.GeoJSON.AJAX("{% url 'cargar_pluma' %}",{
-          style: function (feature) {
-          return {color: feature.properties.color};
+
+<head>
+  {% leaflet_js %}
+  {% leaflet_css %}
+  <meta charset="utf-8">
+  <title> Prueba frontend</title>
+  <style>
+    #map {
+      width: 100%; height: 600px
+    }
+
+    .info {
+      padding: 6px 8px;
+      font: 14px/16px Arial, Helvetica, sans-serif;
+      background: white;
+      background: rgba(255, 255, 255, 0.8);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+      border-radius: 5px;
+    }
+
+    .info h4 {
+      margin: 0 0 5px;
+      color: #777;
+    }
+
+    .legend {
+      text-align: left;
+      line-height: 18px;
+      color: #555;
+    }
+
+    .legend i {
+      width: 18px;
+      height: 18px;
+      float: left;
+      margin-right: 8px;
+      opacity: 0.7;
+    }
+  </style>
+  <script type="text/javascript" src="{% static 'pluma/js/leaflet.ajax.js' %}">
+  </script>
+</head>
+
+<body>
+  <h1>Corrida 1</h1>
+  <script type="text/javascript">
+    function our_layers1(map, options) {
+      var pluma = new L.GeoJSON.AJAX("{% url 'cargar_pluma' %}", {
+        style: function(feature) {
+          console.log(feature);
+          switch (feature.properties.capa) {
+            case 1:
+              return {
+                color: "#ff5733"
+              };
+            case 2:
+              return {
+                color: "#b8ff33"
+              };
+            case 3:
+              return {
+                color: "#3399ff"
+              };
+            case 4:
+              return {
+                color: "#8509b3"
+              };
+            case 2:
+              return {
+                color: "#09b309"
+              };
+          }
+          return {
+            color
+          };
         }
       });
-        pluma.addTo(map);
-      var ruta = new L.GeoJSON.AJAX("{% url 'cargar_rutas' %}",{
-      });
-        ruta.addTo(map);
-      L.layerGroup([ruta])
-      .addLayer(pluma)
-      .addTo(map);
+      pluma.addTo(map);
+      var myStyle = {
+        "color": "#000000",
+        "weight": 3,
+        "opacity": 0.35
+      };
+      var info = L.control();
+
+      info.onAdd = function(map) {
+        this._div = L.DomUtil.create('div', 'info');
+        this.update();
+        return this._div;
+      };
+
+      info.update = function(props, geom) {
+        this._div.innerHTML = '<h4> Ruta:</h4>' + (props ?
+          '<b>' + props.name + '</b><br />' + 'Cooordenas: <p>' + geom.coordinates + '</p>' :
+          'Seleccione una Ruta');
+      };
+
+      info.addTo(map);
+
+      function highlightFeature(e) {
+        var layer = e.target;
+
+        layer.setStyle({
+          weight: 5,
+          color: '#b8ff33',
+          dashArray: '',
+          fillOpacity: 0.7
+        });
+
+        if (!L.Browser.ie && !L.Browser.opera && !L.Browser.edge) {
+          layer.bringToFront();
+        }
+
+        info.update(layer.feature.properties, layer.feature.geometry);
       }
-    </script>
-    <div id="gis">
-    {% leaflet_map "nube" callback="window.our_layers1" %}
+      var rutas;
+      function resetHighlight(e) {
+        rutas.resetStyle(e.target);
+        info.update();
+      }
+
+      function zoomToFeature(e) {
+        map.fitBounds(e.target.getBounds());
+      }
+
+      function onEachFeature(feature, layer) {
+        layer.on({
+          mouseover: highlightFeature,
+          mouseout: resetHighlight,
+          click: zoomToFeature
+        });
+      }
+
+      rutas = new L.GeoJSON.AJAX("{% url 'cargar_rutas' %}", {
+        style: myStyle,
+        onEachFeature: onEachFeature
+      });
+      rutas.addTo(map);
+    }
+  </script>
+  <div id="map">
+      {% leaflet_map "nube" callback="window.our_layers1" %}
   </div>
-
-  <section class="contact-section bg-black">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-4 mb-3 mb-md-0">
-                  <div class="card py-4 h-100">
-                      <div class="card-body text-center">
-                          <h4 class="text-uppercase m-0">Autores</h4>
-                          <hr class="my-4" />
-                          <div class="small text-black-50">Ivan Uribe Méndez</div>
-                          <div class="small text-black-50">Bryan Oswaldo Torres Barajas</div>
-                          <div class="small text-black-50">Brandon Islas Diez de Sollano</div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4 mb-3 mb-md-0">
-                  <div class="card py-4 h-100">
-                      <div class="card-body text-center">
-
-                          <h4 class="text-uppercase m-0">Directores</h4>
-                          <hr class="my-4" />
-                          <div class="small text-black-50">Jaime Hugo Puebla Lomas</div>
-                          <div class="small text-black-50">Jose Carlos Escalona Jimenez</div>
-                          <div class="small text-black-50"></div>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4 mb-3 mb-md-0">
-                  <div class="card py-4 h-100">
-                      <div class="card-body text-center">
-
-                          <h4 class="text-uppercase m-0">Contacto</h4>
-                          <hr class="my-4" />
-                          <div class="small text-black-50">+1 (555) 902-8832</div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="social d-flex justify-content-center">
-              <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-              <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-              <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
-          </div>
-      </div>
-  </section>
-  <!-- Footer-->
-
-  <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
-  <!-- Bootstrap core JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Third party plugin JS-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-
-
-  </body>
+</body>
 </html>
