[ADD] generacion de imagenes para PDF

--- a/test_pluma/pluma/templates/pluma/pdf.html
+++ b/test_pluma/pluma/templates/pluma/pdf.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>PDF Generado</title>
     <style>
 
         * {
@@ -44,7 +44,7 @@
         }
 
     </style>
-    
+
 </head>
 <body>
 <div class="container-fluid">
@@ -59,6 +59,12 @@
         {% for aero in Coordenadas_Afectadas %}
           <b>Coordenadas Aerovia Afectada:</b> {{ aero }}<br>
         {% endfor %}
+    </p>
+    <br>
+    <br>
+    <p>
+      <b>Pluma:</b>
+      <img src="{{imagen1}}">
     </p>
 </div>
 </body>
