[ADD] Integracion front

--- a/test_pluma/pluma/templates/pluma/index.html
+++ b/test_pluma/pluma/templates/pluma/index.html
@@ -43,7 +43,7 @@
           })
         }
 
-        var puntos = new L.GeoJSON.AJAX("{% url 'cargar_puntos' %}", {
+        var puntos = new L.GeoJSON.AJAX("{% url 'cargar_rutas' %}", {
           pointToLayer: estiloCircleMarker
         });
         puntos.addTo(map);
