--- a/test_pluma/pluma/templates/pluma/feed.html
+++ b/test_pluma/pluma/templates/pluma/feed.html
@@ -24,11 +24,8 @@
               <div class="col-sm-4 sidenav">
                   <br>
                   <h3 class="text-white">LOAD SHAPEFILE</h3>
-
-                  <input type="file" name="shape" class="btn btn-primary btn-lg btn-block"></input>
-
+                    <a href="{% url 'test_archivos' %}" class="btn btn-primary btn-lg btn-block">LOAD</a>
                   <br>
-
                   <br>
                   <h3 class="text-white">GET SHAPEFILE</h3>
                   <a type="button" class="btn btn-primary btn-lg btn-block" href="https://www.ready.noaa.gov/hyreg-bin/dispsrc.pl?category=Volcanic_ash" target="_blank">CLICK HERE!</a>
