--- a/test_pluma/pluma/templates/pluma/nube.html
+++ b/test_pluma/pluma/templates/pluma/nube.html
@@ -68,6 +68,7 @@
           {% leaflet_map "nube" callback="window.our_layers1" %}
 
           <a href="{% url 'generate_pdf' %}" class="btn btn-warning">Generar PDF</a>
+          <a href="{% url 'optima' %}" class="btn btn-warning">RUTA ALTERNA</a>
         </div>
 
       </div>
